[gd_scene load_steps=6 format=2]

[ext_resource path="res://DraggableWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/icon_cancel.png" type="Texture" id=2]
[ext_resource path="res://Assets/icon_ok.png" type="Texture" id=3]
[ext_resource path="res://Settings/SaveOptionsPopup.gd" type="Script" id=4]
[ext_resource path="res://Settings/SaveOptionsPopupPreview.gd" type="Script" id=5]

[node name="SaveOptionsPopup" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggableWindow" parent="." instance=ExtResource( 1 )]
margin_left = -2.0
margin_right = 698.0
margin_bottom = 451.0

[node name="VBoxContainer" type="VBoxContainer" parent="DraggableWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="DraggableWindow/VBoxContainer"]
margin_right = 680.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Preview" type="TextureRect" parent="DraggableWindow/VBoxContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.667419
margin_bottom = 0.667419
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DraggableWindow/VBoxContainer"]
margin_top = 304.0
margin_right = 680.0
margin_bottom = 436.0

[node name="FormatOptions" type="HBoxContainer" parent="DraggableWindow/VBoxContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 22.0

[node name="PexButton" type="Button" parent="DraggableWindow/VBoxContainer/VBoxContainer/FormatOptions"]
margin_right = 36.0
margin_bottom = 22.0
toggle_mode = true
pressed = true
text = "PEX"

[node name="PngButton" type="Button" parent="DraggableWindow/VBoxContainer/VBoxContainer/FormatOptions"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 22.0
toggle_mode = true
text = "PNG"

[node name="GifButton" type="Button" parent="DraggableWindow/VBoxContainer/VBoxContainer/FormatOptions"]
visible = false
margin_left = 80.0
margin_right = 113.0
margin_bottom = 22.0
toggle_mode = true
text = "GIF"

[node name="MethodOptions" type="HBoxContainer" parent="DraggableWindow/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 680.0
margin_bottom = 48.0

[node name="SpriteSheetButton" type="Button" parent="DraggableWindow/VBoxContainer/VBoxContainer/MethodOptions"]
margin_right = 98.0
margin_bottom = 22.0
toggle_mode = true
text = "Sprite sheet"

[node name="SeparateFilesButton" type="Button" parent="DraggableWindow/VBoxContainer/VBoxContainer/MethodOptions"]
margin_left = 102.0
margin_right = 213.0
margin_bottom = 22.0
toggle_mode = true
text = "Separate files"

[node name="SizeOptions" type="HBoxContainer" parent="DraggableWindow/VBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 680.0
margin_bottom = 76.0

[node name="x1CheckBox" type="CheckBox" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_right = 44.0
margin_bottom = 24.0
pressed = true
text = "x1"

[node name="x2CheckBox" type="CheckBox" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 24.0
text = "x2"

[node name="x3CheckBox" type="CheckBox" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 24.0
text = "x3"

[node name="x4CheckBox" type="CheckBox" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 144.0
margin_right = 188.0
margin_bottom = 24.0
text = "x4"

[node name="x8CheckBox" type="CheckBox" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 192.0
margin_right = 236.0
margin_bottom = 24.0
text = "x8"

[node name="x16CheckBox" type="CheckBox" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 240.0
margin_right = 292.0
margin_bottom = 24.0
text = "x16"

[node name="DummyLabel2" type="Label" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 296.0
margin_top = 4.0
margin_right = 361.0
margin_bottom = 20.0
text = "             "

[node name="SizeLabel" type="Label" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 365.0
margin_top = 4.0
margin_right = 449.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Size : 64x64"

[node name="DummyLabel3" type="Label" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 453.0
margin_top = 4.0
margin_right = 478.0
margin_bottom = 20.0
text = "     "

[node name="FileNumsLabel" type="Label" parent="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions"]
margin_left = 482.0
margin_top = 4.0
margin_right = 610.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Number of files : 1"

[node name="DummyLabel" type="Label" parent="DraggableWindow/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 680.0
margin_bottom = 96.0

[node name="Buttons" type="HBoxContainer" parent="DraggableWindow/VBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 680.0
margin_bottom = 132.0
custom_constants/separation = 20
alignment = 1

[node name="OkButton" type="TextureButton" parent="DraggableWindow/VBoxContainer/VBoxContainer/Buttons"]
margin_left = 298.0
margin_right = 330.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )

[node name="CancelButton" type="TextureButton" parent="DraggableWindow/VBoxContainer/VBoxContainer/Buttons"]
margin_left = 350.0
margin_right = 382.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/FormatOptions/PexButton" to="." method="_on_PexButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/FormatOptions/PngButton" to="." method="_on_PngButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/FormatOptions/GifButton" to="." method="_on_GifButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/MethodOptions/SpriteSheetButton" to="." method="_on_SpriteSheetButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/MethodOptions/SeparateFilesButton" to="." method="_on_SeparateFilesButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions/x1CheckBox" to="." method="_on_x1CheckBox_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions/x2CheckBox" to="." method="_on_x2CheckBox_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions/x3CheckBox" to="." method="_on_x3CheckBox_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions/x4CheckBox" to="." method="_on_x4CheckBox_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions/x8CheckBox" to="." method="_on_x8CheckBox_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/SizeOptions/x16CheckBox" to="." method="_on_x16CheckBox_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/Buttons/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/VBoxContainer/Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
